subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/valid/Switch_Valid_15.while
int f(int c) {
    int ret = 0;
    switch(c) {
        case 1:
        default:
        case 2:
    }

    return ret;
}

void main() {
    print f(2);
}
