subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/invalid/DefiniteAssign_Invalid_24.while
int f(int x) {
    int y;
    while(x == 0) {
      y = 0;
    }
    return y;
}